--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" href="css/media.css">
 </head>
 <body> 
-	<div style="height: 100px;">ffqfqeas</div>
+	<div style="height: 100px;">joejoj</div>
 <div class="container-fluid cont-1">
   <div class="row">
 	  <div class="col-sm-1 a3"></div>
